--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-loader": "^15.9.8",
         "vue-router": "^3.5.4",
         "vue-template-compiler": "^2.6.12",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "vuex-router-sync": "^5.0.0"
     }
 }
